base/longhorn/ingress.yaml
# base/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui-ingress
  namespace: longhorn-system
  annotations:
    # On utilise les annotations standards qui fonctionnent
    cert-manager.io/cluster-issuer: "letsencrypt-gandi-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  # Le bloc tls indique à cert-manager de créer le secret
  tls:
    - hosts:
        - longhorn.truxonline.com
      secretName: longhorn-ui-tls
  rules:
    - host: longhorn.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend # Le service qui marche
                port:
                  number: 80
