base/longhorn/netpol.yaml
# base/longhorn/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-longhorn-internal
  namespace: longhorn-system
spec:
  # Cette politique s'applique à TOUS les pods dans le namespace
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  # Règle Ingress: autoriser TOUT le trafic entrant...
  ingress:
  # ...qui vient de N'IMPORTE QUEL pod dans le même namespace
  - from:
    - podSelector: {}
  # Règle Egress: autoriser TOUT le trafic sortant...
  egress:
  # ...vers N'IMPORTE QUEL pod dans le même namespace
  - to:
    - podSelector: {}
